Fixed `.menu-toggle` on mobile. See #20

--- a/sass/navigation/_menus.scss
+++ b/sass/navigation/_menus.scss
@@ -71,18 +71,23 @@
 }
 
 /* Small menu. */
-.menu-toggle,
 .page-navigation-container.toggled-on ul {
 	display: block;
 }
 
-.js .menu-toggle,
-.js .dropdown-toggle {
+.menu-toggle,
+.dropdown-toggle {
   display: none;
 }
 
+.js .menu-toggle,
+.js .dropdown-toggle {
+  display: block;
+}
+
 @media screen and (min-width: 37.5em) {
-	.menu-toggle {
+	.js .menu-toggle,
+	.js .dropdown-toggle {
 		display: none;
 	}
 	.page-navigation-container ul {
